Added Login, Sign Up and Logout

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -22,6 +22,10 @@ button {
   background-color: #1a73e8;
 }
 
+.signup , .login{
+  border: 2px solid #1a73e8;
+  padding: 5px;
+}
 input {
   padding: 8px;
   font-size: 16px;
